--- a/View/Pages/ViewSelectionPage.xaml
+++ b/View/Pages/ViewSelectionPage.xaml
@@ -8,6 +8,7 @@
       xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
       xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro" 
       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:res="clr-namespace:WpfApp1.Properties"
       
       xmlns:viewmodels="clr-namespace:WpfApp1.ViewModel.ViewModels"
       d:DataContext="{d:DesignInstance Type=viewmodels:ViewSelectionPageViewModel}"
@@ -29,7 +30,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Назад" Grid.Row="0"
+        <Button Content="{x:Static res:Resources.BackButton}" Grid.Row="0"
                 Command="NavigationCommands.BrowseBack" 
                 Padding="3" MinHeight="25" MinWidth="35"
                 HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
@@ -39,12 +40,12 @@
                   ScrollViewer.CanContentScroll="True" BorderThickness="2,2,2,2">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Path=Date}" Width="100"/>
-                    <GridViewColumn Header="Имя" DisplayMemberBinding="{Binding Path=FirstName}" Width="100"/>
-                    <GridViewColumn Header="Фамилия" DisplayMemberBinding="{Binding Path=LastName}" Width="100"/>
-                    <GridViewColumn Header="Отчество" DisplayMemberBinding="{Binding Path=Patronymic}" Width="100"/>
-                    <GridViewColumn Header="Город" DisplayMemberBinding="{Binding Path=City}" Width="100"/>
-                    <GridViewColumn Header="Страна" DisplayMemberBinding="{Binding Path=Country}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.DateWord}" DisplayMemberBinding="{Binding Path=Date}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.FirstNameWord}" DisplayMemberBinding="{Binding Path=FirstName}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.LastNameWord}" DisplayMemberBinding="{Binding Path=LastName}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.PatronymicWord}" DisplayMemberBinding="{Binding Path=Patronymic}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.CityWord}" DisplayMemberBinding="{Binding Path=City}" Width="100"/>
+                    <GridViewColumn Header="{x:Static res:Resources.CountryWord}" DisplayMemberBinding="{Binding Path=Country}" Width="100"/>
                 </GridView>
             </ListView.View>
         </ListView>
